fixed wrong font size

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -14,7 +14,7 @@
 body {
     background: #F2EFE9;
 }
-.top-text {
+.top-text h1 {
     font-size: 10vw;
     padding-top: 20px;
 }
